--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
       }(window, document);
     </script>
-    <link href="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/6650b92913bb0799d453b3be_WhatsApp%20logo.png" rel="shortcut icon" type="image/x-icon" />
-    <link href="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/6650b92d0c90c13660231c6e_WhatsApp%20logo256.png" rel="apple-touch-icon" />
+    <link href="./assets/6650b92913bb0799d453b3be_WhatsApp%20logo.png" rel="shortcut icon" type="image/x-icon" />
+    <link href="./assets/6650b92d0c90c13660231c6e_WhatsApp%20logo256.png" rel="apple-touch-icon" />
     <script type="text/javascript">
       window.__WEBFLOW_CURRENCY_SETTINGS = {
         "currencyCode": "USD",
@@ -85,7 +85,16 @@
     <div class="div-block-3">
       <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="aitech-navbar aitect-nav-main-bar w-nav">
         <div class="navbar-content-wrapper">
-          <div class="navbar-container"><a href="/" aria-current="page" class="metaoriginal w-nav-brand w--current"><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d5442ad1b319f8d98f65b_Completo-branco.png" sizes="(max-width: 479px) 85vw, 200px" width="200" height="32" alt="" srcset="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d5442ad1b319f8d98f65b_Completo-branco-p-500.png 500w, https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d5442ad1b319f8d98f65b_Completo-branco-p-800.png 800w, https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d5442ad1b319f8d98f65b_Completo-branco-p-1080.png 1080w, https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d5442ad1b319f8d98f65b_Completo-branco-p-1600.png 1600w, https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d5442ad1b319f8d98f65b_Completo-branco-p-2000.png 2000w, https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d5442ad1b319f8d98f65b_Completo-branco-p-2600.png 2600w, https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d5442ad1b319f8d98f65b_Completo-branco-p-3200.png 3200w, https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d5442ad1b319f8d98f65b_Completo-branco.png 6664w" /></a>
+          <div class="navbar-container">
+            <a href="/" aria-current="page" class="metaoriginal w-nav-brand w--current">
+              <img 
+                src="./assets/662d5442ad1b319f8d98f65b_Completo-branco.png" 
+                sizes="(max-width: 479px) 85vw, 200px" 
+                width="200" 
+                height="32" 
+                alt="" 
+                srcset="./assets/662d5442ad1b319f8d98f65b_Completo-branco-p-500.png 500w, ./assets/662d5442ad1b319f8d98f65b_Completo-branco-p-800.png 800w, ./assets/662d5442ad1b319f8d98f65b_Completo-branco-p-1080.png 1080w, ./assets/662d5442ad1b319f8d98f65b_Completo-branco-p-1600.png 1600w, ./assets/662d5442ad1b319f8d98f65b_Completo-branco-p-2000.png 2000w, ./assets/662d5442ad1b319f8d98f65b_Completo-branco-p-2600.png 2600w, ./assets/662d5442ad1b319f8d98f65b_Completo-branco-p-3200.png 3200w, ./assets/662d5442ad1b319f8d98f65b_Completo-branco.png 6664w" />
+            </a>
             <div class="aitech-home-one-nav-button-box"></div>
             <div class="nav-menu-button w-nav-button"></div>
           </div>
@@ -389,11 +398,13 @@
       </div>
     </footer>
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=662d4826367d89131cfa2614" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/js/webflow.schunk.95eb20322d8dfe96.js" type="text/javascript"></script>
-    <!-- <script src="./js/script1.js" type="text/javascript"></script> -->
-    <script src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/js/webflow.schunk.0b537edf8a85e51b.js" type="text/javascript"></script>
-    <!-- <script src="./js/script2.js" type="text/javascript"></script> -->
-    <script src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/js/webflow.9f1bc8a2.e520c975133c8124.js" type="text/javascript"></script>
-    <!-- <script src="./js/script3.js" type="text/javascript"></script> -->
+    
+    <script src="./js/script1.js" type="text/javascript"></script>
+    <script src="./js/script2.js" type="text/javascript"></script>
+    <script src="./js/script3.js" type="text/javascript"></script>
+
+    <!-- <script src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/js/webflow.schunk.95eb20322d8dfe96.js" type="text/javascript"></script> -->
+    <!-- <script src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/js/webflow.schunk.0b537edf8a85e51b.js" type="text/javascript"></script> -->
+    <!-- <script src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/js/webflow.9f1bc8a2.e520c975133c8124.js" type="text/javascript"></script> -->
   </body>
 </html>
