--- a/index.html
+++ b/index.html
@@ -129,47 +129,47 @@
       <div class="home-three-about-marque-block">
         <div data-w-id="87d34873-1c39-f129-fa93-2376425f7820" class="marque-main-wrapper home-three-marque-gap">
           <div class="marque-train home-one-logo-marque-train home-three-about-marque">
-            <div class="home-three-marque-logo-wrapper"><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662fec2a33c14763864b2d3b_Tecnisa.png" loading="lazy" width="200" height="70" alt="Tecnisa Logo
+            <div class="home-three-marque-logo-wrapper"><img src="./assets/662fec2a33c14763864b2d3b_Tecnisa.png" loading="lazy" width="200" height="70" alt="Tecnisa Logo
 " /></div>
-            <div class="home-three-marque-logo-wrapper"><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662fec2b6e9f068e697f0413_Dezer.png" id="Dezer" width="200" height="50" alt="Dezer logo
+            <div class="home-three-marque-logo-wrapper"><img src="./assets/662fec2b6e9f068e697f0413_Dezer.png" id="Dezer" width="200" height="50" alt="Dezer logo
 " /></div>
-            <div class="home-three-marque-logo-wrapper"><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662fec2b782e12b1ca6b5071_Related.png" alt="Related Logo
+            <div class="home-three-marque-logo-wrapper"><img src="./assets/662fec2b782e12b1ca6b5071_Related.png" alt="Related Logo
 " width="200" height="70" /></div>
-            <div class="home-three-marque-logo-wrapper"><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/663112535752fb6998da1ebd_LOGO_FISHERISLAND.png" alt="6 Fisher logo
+            <div class="home-three-marque-logo-wrapper"><img src="./assets/663112535752fb6998da1ebd_LOGO_FISHERISLAND.png" alt="6 Fisher logo
 " width="200" height="70" /></div>
-            <div class="home-three-marque-logo-wrapper"><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/6631125322cd9ea5a2476b09_T_Logo_Rivage.png" alt="Rivage Logo
+            <div class="home-three-marque-logo-wrapper"><img src="./assets/6631125322cd9ea5a2476b09_T_Logo_Rivage.png" alt="Rivage Logo
 " width="200" height="70" /></div>
-            <div class="home-three-marque-logo-wrapper"><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/663113db2468b5fccdd63684_Bentley-Logo.png" alt="Bentley logo
+            <div class="home-three-marque-logo-wrapper"><img src="./assets/663113db2468b5fccdd63684_Bentley-Logo.png" alt="Bentley logo
 " width="200" height="100" /></div>
             <div class="home-three-marque-line"></div>
           </div>
           <div class="marque-train home-one-logo-marque-train home-three-about-marque">
-            <div class="home-three-marque-logo-wrapper"><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662fec2a33c14763864b2d3b_Tecnisa.png" loading="lazy" width="200" height="70" alt="Tecnisa Logo
+            <div class="home-three-marque-logo-wrapper"><img src="./assets/662fec2a33c14763864b2d3b_Tecnisa.png" loading="lazy" width="200" height="70" alt="Tecnisa Logo
 " /></div>
-            <div class="home-three-marque-logo-wrapper"><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662fec2b6e9f068e697f0413_Dezer.png" alt="Dezer logo
+            <div class="home-three-marque-logo-wrapper"><img src="./assets/662fec2b6e9f068e697f0413_Dezer.png" alt="Dezer logo
 " width="200" height="50" /></div>
-            <div class="home-three-marque-logo-wrapper"><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662fec2b782e12b1ca6b5071_Related.png" alt="Related Logo
+            <div class="home-three-marque-logo-wrapper"><img src="./assets/662fec2b782e12b1ca6b5071_Related.png" alt="Related Logo
 " width="200" height="70" /></div>
-            <div class="home-three-marque-logo-wrapper"><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/663112535752fb6998da1ebd_LOGO_FISHERISLAND.png" alt="6 Fisher logo
+            <div class="home-three-marque-logo-wrapper"><img src="./assets/663112535752fb6998da1ebd_LOGO_FISHERISLAND.png" alt="6 Fisher logo
 " width="200" height="70" /></div>
-            <div class="home-three-marque-logo-wrapper"><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/6631125322cd9ea5a2476b09_T_Logo_Rivage.png" alt="Rivage Logo
+            <div class="home-three-marque-logo-wrapper"><img src="./assets/6631125322cd9ea5a2476b09_T_Logo_Rivage.png" alt="Rivage Logo
 " width="200" height="70" /></div>
-            <div class="home-three-marque-logo-wrapper"><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/663113db2468b5fccdd63684_Bentley-Logo.png" alt="Bentley logo
+            <div class="home-three-marque-logo-wrapper"><img src="./assets/663113db2468b5fccdd63684_Bentley-Logo.png" alt="Bentley logo
 " width="200" height="100" /></div>
             <div class="home-three-marque-line"></div>
           </div>
           <div class="marque-train home-one-logo-marque-train home-three-about-marque">
-            <div class="home-three-marque-logo-wrapper"><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662fec2a33c14763864b2d3b_Tecnisa.png" loading="lazy" width="200" height="70" alt="Tecnisa Logo
+            <div class="home-three-marque-logo-wrapper"><img src="./assets/662fec2a33c14763864b2d3b_Tecnisa.png" loading="lazy" width="200" height="70" alt="Tecnisa Logo
 " /></div>
-            <div class="home-three-marque-logo-wrapper"><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662fec2b6e9f068e697f0413_Dezer.png" alt="Dezer logo
+            <div class="home-three-marque-logo-wrapper"><img src="./assets/662fec2b6e9f068e697f0413_Dezer.png" alt="Dezer logo
 " width="200" height="50" /></div>
-            <div class="home-three-marque-logo-wrapper"><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662fec2b782e12b1ca6b5071_Related.png" alt="Related Logo
+            <div class="home-three-marque-logo-wrapper"><img src="./assets/662fec2b782e12b1ca6b5071_Related.png" alt="Related Logo
 " width="200" height="70" /></div>
-            <div class="home-three-marque-logo-wrapper"><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/663112535752fb6998da1ebd_LOGO_FISHERISLAND.png" alt="6 Fisher logo
+            <div class="home-three-marque-logo-wrapper"><img src="./assets/663112535752fb6998da1ebd_LOGO_FISHERISLAND.png" alt="6 Fisher logo
 " width="200" height="70" /></div>
-            <div class="home-three-marque-logo-wrapper"><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/6631125322cd9ea5a2476b09_T_Logo_Rivage.png" alt="Rivage Logo
+            <div class="home-three-marque-logo-wrapper"><img src="./assets/6631125322cd9ea5a2476b09_T_Logo_Rivage.png" alt="Rivage Logo
 " width="200" height="70" /></div>
-            <div class="home-three-marque-logo-wrapper"><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/663113db2468b5fccdd63684_Bentley-Logo.png" alt="Bentley logo
+            <div class="home-three-marque-logo-wrapper"><img src="./assets/663113db2468b5fccdd63684_Bentley-Logo.png" alt="Bentley logo
 " width="200" height="100" /></div>
             <div class="home-three-marque-line"></div>
           </div>
@@ -238,21 +238,21 @@
         </div>
       </div>
       <div data-w-id="39f811a4-b84e-b2c5-ef14-1dde608b1576" class="marque-main-wrapper">
-        <div class="marque-train home-one-main-marque"><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" class="image-two" />
-          <div class="home-one-marque-content">SENSORY ART</div><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" class="image-2" />
-          <div class="home-one-marque-content">IMMERSIVE ART</div><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" />
+        <div class="marque-train home-one-main-marque"><img src="./assets/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" class="image-two" />
+          <div class="home-one-marque-content">SENSORY ART</div><img src="./assets/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" class="image-2" />
+          <div class="home-one-marque-content">IMMERSIVE ART</div><img src="./assets/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" />
         </div>
         <div class="marque-train home-one-main-marque">
-          <div class="home-one-marque-content">IMMERSIVE ART</div><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" class="image-two" />
-          <div class="home-one-marque-content">SENSORY ART</div><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" />
+          <div class="home-one-marque-content">IMMERSIVE ART</div><img src="./assets/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" class="image-two" />
+          <div class="home-one-marque-content">SENSORY ART</div><img src="./assets/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" />
         </div>
         <div class="marque-train home-one-main-marque">
-          <div class="home-one-marque-content">IMMERSIVE ART</div><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" class="image-two" />
-          <div class="home-one-marque-content">SENSORY ART</div><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" />
+          <div class="home-one-marque-content">IMMERSIVE ART</div><img src="./assets/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" class="image-two" />
+          <div class="home-one-marque-content">SENSORY ART</div><img src="./assets/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" />
         </div>
         <div class="marque-train home-one-main-marque">
-          <div class="home-one-marque-content">IMMERSIVE ART</div><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" class="image-two" />
-          <div class="home-one-marque-content">SENSORY ART</div><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" />
+          <div class="home-one-marque-content">IMMERSIVE ART</div><img src="./assets/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" class="image-two" />
+          <div class="home-one-marque-content">SENSORY ART</div><img src="./assets/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" />
         </div>
       </div>
       <div data-w-id="bf8767ca-0854-8256-4d63-e2bd86537676" class="home-two-portfolio-gallery">
@@ -273,7 +273,7 @@
         </div>
       </div>
     </section>
-    <div class="container home-four-service-container"><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa2932_Small%20Cone%20Svg.svg" data-w-id="80968b93-6497-d7c7-3e9d-0604b352921b" width="68" height="68" alt="" class="home-four-service-cone" />
+    <div class="container home-four-service-container"><img src="./assets/662d4826367d89131cfa2932_Small%20Cone%20Svg.svg" data-w-id="80968b93-6497-d7c7-3e9d-0604b352921b" width="68" height="68" alt="" class="home-four-service-cone" />
       <div class="inner-container home-four-service-inner-container">
         <div data-w-id="b3795a6d-6242-cfc1-0d04-0b6990b477bb" class="home-three-text-style-box home-three-top-text-box">
           <div class="home-one-award-top-text home-three-top-text-align">MetaOriginal in the News</div>
@@ -399,12 +399,12 @@
     </footer>
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=662d4826367d89131cfa2614" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     
-    <script src="./js/script1.js" type="text/javascript"></script>
-    <script src="./js/script2.js" type="text/javascript"></script>
-    <script src="./js/script3.js" type="text/javascript"></script>
+    <!-- <script src="./js/script1.js" type="text/javascript"></script> -->
+    <!-- <script src="./js/script2.js" type="text/javascript"></script> -->
+    <!-- <script src="./js/script3.js" type="text/javascript"></script> -->
 
-    <!-- <script src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/js/webflow.schunk.95eb20322d8dfe96.js" type="text/javascript"></script> -->
-    <!-- <script src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/js/webflow.schunk.0b537edf8a85e51b.js" type="text/javascript"></script> -->
-    <!-- <script src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/js/webflow.9f1bc8a2.e520c975133c8124.js" type="text/javascript"></script> -->
+    <script src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/js/webflow.schunk.95eb20322d8dfe96.js" type="text/javascript"></script>
+    <script src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/js/webflow.schunk.0b537edf8a85e51b.js" type="text/javascript"></script>
+    <script src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/js/webflow.9f1bc8a2.e520c975133c8124.js" type="text/javascript"></script>
   </body>
 </html>
