feat: add new SVG assets and update image paths in index.html

--- a/index.html
+++ b/index.html
@@ -304,21 +304,21 @@
       </div>
     </div>
     <div data-w-id="39f811a4-b84e-b2c5-ef14-1dde608b1576" class="marque-main-wrapper">
-      <div class="marque-train home-one-main-marque"><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" class="image-two" />
-        <div class="home-one-marque-content">SENSORY ART</div><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" class="image-2" />
-        <div class="home-one-marque-content">IMMERSIVE ART</div><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" />
+      <div class="marque-train home-one-main-marque"><img src="./assets/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" class="image-two" />
+        <div class="home-one-marque-content">SENSORY ART</div><img src="./assets/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" class="image-2" />
+        <div class="home-one-marque-content">IMMERSIVE ART</div><img src="./assets/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" />
       </div>
       <div class="marque-train home-one-main-marque">
-        <div class="home-one-marque-content">IMMERSIVE ART</div><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" class="image-two" />
-        <div class="home-one-marque-content">SENSORY ART</div><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" />
+        <div class="home-one-marque-content">IMMERSIVE ART</div><img src="./assets/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" class="image-two" />
+        <div class="home-one-marque-content">SENSORY ART</div><img src="./assets/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" />
       </div>
       <div class="marque-train home-one-main-marque">
-        <div class="home-one-marque-content">IMMERSIVE ART</div><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" class="image-two" />
-        <div class="home-one-marque-content">SENSORY ART</div><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" />
+        <div class="home-one-marque-content">IMMERSIVE ART</div><img src="./assets/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" class="image-two" />
+        <div class="home-one-marque-content">SENSORY ART</div><img src="./assets/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" />
       </div>
       <div class="marque-train home-one-main-marque">
-        <div class="home-one-marque-content">IMMERSIVE ART</div><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" class="image-two" />
-        <div class="home-one-marque-content">SENSORY ART</div><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" />
+        <div class="home-one-marque-content">IMMERSIVE ART</div><img src="./assets/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" class="image-two" />
+        <div class="home-one-marque-content">SENSORY ART</div><img src="./assets/662d4826367d89131cfa290e_AiTech%20Marque%20Star.svg" alt="" width="30" height="30" />
       </div>
     </div>
     <section class="fome-two-faq-section">
@@ -327,7 +327,7 @@
         <div class="accordian-home-one home-two-faq-wrapper">
           <div data-w-id="d9d2ea65-e45f-ab15-1cbe-3948226b26ee" class="padding-bottom-ten future-box-item home-two-faq-wrapper">
             <div data-w-id="d9d2ea65-e45f-ab15-1cbe-3948226b26ef" class="accordian-home-heading-wrapper home-two-faq-text-wrapper active">
-              <div class="heading-five home-qustion-text"><strong>What do we do?</strong></div><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa2866_Substrack.svg" alt="Substrack Icon" width="18" height="4" class="home-one-substrack-icon active" /><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa2864_plus%20(4).svg" alt="Plus Icon" width="18" height="17" class="auto-fit accordian-icon active" />
+              <div class="heading-five home-qustion-text"><strong>What do we do?</strong></div><img src="./assets/662d4826367d89131cfa2866_Substrack.svg" alt="Substrack Icon" width="18" height="4" class="home-one-substrack-icon active" /><img src="./assets/662d4826367d89131cfa2864_plus%20(4).svg" alt="Plus Icon" width="18" height="17" class="auto-fit accordian-icon active" />
             </div>
             <div class="accordiant-text overflow-hidden">
               <p class="home-one-future-description home-two-faq-description">Immersive Sensory Art; we transform visits into unique experiences. We are digital artists; with this technology, we sharpen the 5 senses of our clients. With our own developed techniques, we give users the ability to navigate through common areas, choose their desired floor, and navigate within the chosen units. We take our clients to the future—allowing them to even sit and enjoy the view from their future apartment, all in real time and with the highest graphic quality ever seen.</p>
@@ -335,7 +335,7 @@
           </div>
           <div data-w-id="d9d2ea65-e45f-ab15-1cbe-3948226b26f8" class="padding-bottom-ten future-box-item home-two-faq-wrapper">
             <div data-w-id="d9d2ea65-e45f-ab15-1cbe-3948226b26f9" class="accordian-home-heading-wrapper home-two-faq-text-wrapper">
-              <div class="heading-five home-qustion-text">What is the investment price, and how long does it take to complete?</div><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa2866_Substrack.svg" alt="Substrack Icon" width="18" height="4" class="home-one-substrack-icon" /><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa2864_plus%20(4).svg" alt="Plus Icon" width="18" height="17" class="auto-fit accordian-icon" />
+              <div class="heading-five home-qustion-text">What is the investment price, and how long does it take to complete?</div><img src="./assets/662d4826367d89131cfa2866_Substrack.svg" alt="Substrack Icon" width="18" height="4" class="home-one-substrack-icon" /><img src="./assets/662d4826367d89131cfa2864_plus%20(4).svg" alt="Plus Icon" width="18" height="17" class="auto-fit accordian-icon" />
             </div>
             <div class="accordiant-text overflow-hidden off-on-load">
               <p class="home-one-future-description home-two-faq-description">Channeling our inner Einstein, we can confidently say that the answer to this question is ‘relative,’ much like his famous theory of relativity. It varies based on the project’s conditions, such as square footage, dimensions, number of typologies, the client’s needs, and the peculiarities of each project. Contact us today, and we’ll provide a tailored response specific to your project’s needs.</p>
@@ -343,7 +343,7 @@
           </div>
           <div data-w-id="d9d2ea65-e45f-ab15-1cbe-3948226b2702" class="padding-bottom-ten future-box-item home-two-faq-wrapper">
             <div data-w-id="d9d2ea65-e45f-ab15-1cbe-3948226b2703" class="accordian-home-heading-wrapper home-two-faq-text-wrapper">
-              <div class="heading-five home-qustion-text">Why don&#x27;t we use the VR goggles?</div><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa2866_Substrack.svg" alt="Substrack Icon" width="18" height="4" class="home-one-substrack-icon" /><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa2864_plus%20(4).svg" alt="Plus Icon" width="18" height="17" class="auto-fit accordian-icon" />
+              <div class="heading-five home-qustion-text">Why don&#x27;t we use the VR goggles?</div><img src="./assets/662d4826367d89131cfa2866_Substrack.svg" alt="Substrack Icon" width="18" height="4" class="home-one-substrack-icon" /><img src="./assets/662d4826367d89131cfa2864_plus%20(4).svg" alt="Plus Icon" width="18" height="17" class="auto-fit accordian-icon" />
             </div>
             <div class="accordiant-text overflow-hidden off-on-load">
               <p class="home-one-future-description home-two-faq-description">We follow the teachings of Steve Jobs, whose concepts, despite being old, still apply today. According to Jobs, the usability of technology should be an extension of our bodies. He demonstrated this by eliminating the need for a stylus for cellphones and introducing touch with our own fingers. Following this masterclass and having studied the use of VR in the real estate market, we realized two factors that make us focus on technologies that do not require goggles:<br /><br />1- There is a significant risk that the 82.7% of the US population who have not used VR technologies could experience severe vertigo and nausea upon exposure. Certainly, these are not sensations you want your clients to associate with your brand or project when leaving a sales gallery. <br /><br />2- VR creates a very individualistic experience; when customers are purchasing their future home, it is rare that they go alone, often bringing spouses, children, and friends. With this in mind, the loss of time and engagement between the broker and the clients turns out to be unfeasible. And, as we know, Time is Money!</p>
@@ -351,7 +351,7 @@
           </div>
           <div data-w-id="d9d2ea65-e45f-ab15-1cbe-3948226b270c" class="padding-bottom-ten future-box-item home-two-faq-wrapper">
             <div data-w-id="d9d2ea65-e45f-ab15-1cbe-3948226b270d" class="accordian-home-heading-wrapper home-two-faq-text-wrapper">
-              <div class="heading-five home-qustion-text"><strong>What impact does your Immersive Sensory ART have on the market?</strong></div><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa2866_Substrack.svg" alt="Substrack Icon" width="18" height="4" class="home-one-substrack-icon" /><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa2864_plus%20(4).svg" alt="Plus Icon" width="18" height="17" class="auto-fit accordian-icon" />
+              <div class="heading-five home-qustion-text"><strong>What impact does your Immersive Sensory ART have on the market?</strong></div><img src="./assets/662d4826367d89131cfa2866_Substrack.svg" alt="Substrack Icon" width="18" height="4" class="home-one-substrack-icon" /><img src="./assets/662d4826367d89131cfa2864_plus%20(4).svg" alt="Plus Icon" width="18" height="17" class="auto-fit accordian-icon" />
             </div>
             <div class="accordiant-text overflow-hidden off-on-load">
               <p class="home-one-future-description home-two-faq-description">We are not the ones to speak about the impact; We believe that the true measure of our impact lies in the voices of our clients. Visit the &#x27;About&#x27; page or any specific project to see the comments and testimonials they&#x27;ve shared!</p>
@@ -359,12 +359,12 @@
           </div>
         </div>
       </div>
-      <div class="container home-two-faq-main-container"><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa2884_Home%20Two%20Faq%20Vector.svg" data-w-id="d9d2ea65-e45f-ab15-1cbe-3948226b26e7" width="57" height="106" alt="Svg" class="home-two-faq-icon" /></div>
+      <div class="container home-two-faq-main-container"><img src="./assets/662d4826367d89131cfa2884_Home%20Two%20Faq%20Vector.svg" data-w-id="d9d2ea65-e45f-ab15-1cbe-3948226b26e7" width="57" height="106" alt="Svg" class="home-two-faq-icon" /></div>
     </section>
     <section data-w-id="de85a49c-35ad-d22f-f460-f98e1201287a" class="about-one-contact-section">
       <div class="container about-contact-section">
         <div class="inner-container about-one-contact-wrapper">
-          <div class="about-one-contact-heading-box"><img src="https://cdn.prod.website-files.com/662d4826367d89131cfa2614/662d4826367d89131cfa2944_About%20One%20Contact%20Svg.svg" loading="lazy" data-w-id="de85a49c-35ad-d22f-f460-f98e1201287e" alt="Line Svg" class="about-one-contact-line" />
+          <div class="about-one-contact-heading-box"><img src="./assets/662d4826367d89131cfa2944_About%20One%20Contact%20Svg.svg" loading="lazy" data-w-id="de85a49c-35ad-d22f-f460-f98e1201287e" alt="Line Svg" class="about-one-contact-line" />
             <div data-w-id="de85a49c-35ad-d22f-f460-f98e1201287f" class="about-one-heading-three text-center about-one-contact-heading">Are you ready for the future?</div>
           </div>
           <p data-w-id="de85a49c-35ad-d22f-f460-f98e12012881" class="text-center about-one-contact-desctiption">Meet our team of virtual gardeners, engineers, architects, and much more. We have the best team to build your immersive and digital dream space.</p><a data-w-id="de85a49c-35ad-d22f-f460-f98e12012883" href="/contact" class="button all-button button-style w-inline-block">
